# the_computer_control_with_hand_gestures

./: .gitignore  README.md
cpp/the_computer_control_with_hand_gestures/: .gitmodules  CMakeLists.txt  CMakeSettings.json  gesture_cnn.cpp  gesture_cnn.h  gesture_cnn.onnx  hand_tracker.cpp  hand_tracker.h  main.cpp  mouse_controller.h
documents/: AYNIYH (All You Need Is Your Hand)_ A C++ Based Hand Gesture Recognition System For Computer Control.pptx  AYNIYH Project Progress.pptx  The Progress Report.docx  minor_project_report.docx
python/: analyse_data.py  cpp_latency.csv  generate_graphs.py  gesture_landmarks.csv  gestures.csv  main.py  preprocess_dataset.py  python_latency.csv  requirements.txt  statistical_summary.txt  train_cnn.py
